--- a/upper_limbs.html
+++ b/upper_limbs.html
@@ -86,8 +86,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Upper Limbs
-                    <small>The Digital Age Estimator of Subadult Skeletons</small>
+		    <h1 class="page-header"><b>Upper Limbs</b>
                 </h1>
             </div>
         </div>
@@ -236,7 +235,7 @@
             
 	<div class="col-lg-3">
 		<div class="description">
-		<h7><a name="clavicle1">Clavicle</a></h7>
+			<h7><a name="clavicle1"><b>Clavicle</b></a></h7>
 			<br><br><br><br><h2>Clavicle</h2>
 		<p>The clavicle is an interesting case as it is one of the first bones to form in utero at about 5 weeks, but it is the last bone to have any epiphyses fuse.  The medial end of the clavicle remains without an epiphysis until a small medial flake begins to form.  The timing of this ossification usually occurs between 12 and 14 years with fusion beginning sometime between 16 and 21 years of age (Stevenson 1924; McKern and Stewart).  However, complete fusion of the medial epiphysis is highly variable and only guaranteed to be finished by individuals older than 29 years of age (MacLaughlin 1990; Black and Scheuer 1996).</p>
 		</div>
@@ -273,7 +272,7 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h7><a name="scapula1">Scapula</a></h7>
-			<br><br><br><br><h2>Scapula</h2>
+			<br><br><br><br><h2><b>Scapula</b></h2>
 		<p>The appearance and ossification of scapular elements are complex and numerous.  The body of the scapula is mostly ossified upon birth with other centers appearing later (Cardoso 2008).  The ossification center for the coracoid process appears within the first year of life (Birkner 1978; Ogden and Philips 1983).  The coracoid exists as an unfused epiphysis for many years before fusion is complete.  This usually occurs around the 14th and 15th years of life (Anderson 1963). </p>
 		<p>Although there are many other secondary ossification centers on the scapula, the majority of them are thin and flaky, making preservation of them somewhat problematic.  Additionally, their appearance and fusion times are quite variable.  As a result, only the coracoid process is discussed in this project.</p>			
 		</div>
@@ -308,7 +307,7 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h7><a name="humerus1">Humerus</a></h7>
-			<br><br><br><br><h2>Humerus</h2>
+			<br><br><br><br><h2><b>Humerus</b></h2>
 		<p>At birth, only the diaphysis is present as bone.  Secondary ossification centers start to form soon after birth.  The proximal epiphysis is actually comprised of three separate epiphyses which coalesce into a compound proximal epiphysis.  The head and greater and lesser tubercles appear within the first few years of life and become one epiphysis around 5-7 years old (Flecker 1942; Gardener 1969).  The proximal epiphysis eventually fuses to the rest of the humerus between 14-19 (form females) and 16-21 (in males) (Ogden et al. 1978).<p>
 		<p>Centers for the distal humerus occur at different centers and are somewhat variable in appearance times (Flecker 1942).  Since this is only a brief introduction to aging methods for subadults, only the fusion of the compound distal epiphysis will be noted, although it should be mentioned that these epiphyses are usually fused together by age 12 (McCarthy and Ogden 1982a; McCarthy and Ogden 1982b).  This compound distal epiphysis fuses to the rest of the humerus between 11-16 (females) and 14-19 (males) (Hansman 1962), yet 15 years of age appears to be the average (Brodeur et al. 1981).</p>		
 		</div>
@@ -353,7 +352,7 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h7><a name="radius1">Radius</a></h7>
-			<br><br><br><br><h2>Radius</h2>
+			<br><br><br><br><h2><b>Radius</b></h2>
 		<p>The shaft of the radius is present at birth with the first secondary ossification center appearing at the distal end around ages 1-2 years (Elgenmark 1946; Flecker 1962).  This epiphysis doesn’t fuse to the rest of the radius until adolescence with studies reporting ranges from 15-16 in females and 17-18 in males (Greulich and Pyle 1959).</p>
 		<p>The radial head epiphysis doesn’t appear until around age 5 (Brodeur et al. 1981) but generally fuses to the diaphysis before the distal epiphysis (McCarthy and Ogden 1982b).  The radial head epiphysis usually fuses around menarche for girls (11-15) and a few years later in boys (Brodeur et al. 1981).</p>
 		</div>
@@ -399,7 +398,7 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h7><a name="ulna1">Ulna</a></h7>
-			<br><br><br><br><h2>Ulna</h2>
+			<br><br><br><br><h2><b>Ulna</b></h2>
 		<p>Similarly to the radius, the ulnar shaft is only present at birth.  The distal epiphysis appears around 5-7 (Elgenmark 1946; Flecker 1962) but doesn’t fuse to the ulnar shaft until between 17 and 20 (Hansman 1962; Flecker 1962).</p>
 		<p>The proximal (or olecranon) epiphysis appears by 8-10 years in children and also fuses before the distal epiphysis (Ogden et al. 1981). Union between the diaphysis and the olecranon can occur between 12 and 14 years.</p>
 
@@ -447,7 +446,7 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h7><a name="hands1">Hands</a></h7>
-			<br><br><br><br><h2>Hands</h2>
+			<br><br><br><br><h2><b>Hands</b></h2>
 			<br><br><h2>Carpals</h2>
 			<p>The carpals in the hand can be a great way of estimating age of subadults as they do not all appear simultaneously.  Carpals tend to follow a generalized schedule that appears to be relatively consistent (O’Rahilly et al. 1959).  Due to the number of them, and to save space on the page, use the age estimator to the right to find out at what ages certain carpals appear.</p>
 		</div>
