--- a/skull.html
+++ b/skull.html
@@ -82,7 +82,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">The Skull
+		    <h1 class="page-header"><b>The Skull</b>
                     <small>Fusion of cranial and mandibular elements</small>
                 </h1>
             </div>
