--- a/pelvic_girdle.html
+++ b/pelvic_girdle.html
@@ -82,7 +82,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">The Pelvic girdle
+		    <h1 class="page-header"><b>The Pelvic girdle</b>
                 </h1>
             </div>
         </div>
