--- a/thorax.html
+++ b/thorax.html
@@ -82,7 +82,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">The Thorax
+		    <h1 class="page-header"><b>The Thorax</b>
                 </h1>
             </div>
         </div>
@@ -218,7 +218,7 @@
 		<div class="col-lg-3">
 			<div class="description">
 			<h7><a name="atlas1">The Atlas</a></h7>
-				<br><br><br><br><h2>The Atlas</h2>
+				<br><br><br><br><h2><b>The Atlas</b></h2>
 			<p>The atlas, or C1 vertebra, is the most superior vertebra that articulates with the occipital bone and allows rotary and pivoting movements of the head and neck.  Unlike other vertebrae, not all of the ossification centers of the atlas are present at birth.  Only the two lateral masses are present with the anterior arch appearing by the second year (Doherty and Heggeness 1994).</p>
 			<p>Between the fourth and sixth years, the two lateral masses fuse together posteriorly to form the posterior arch.  Around the sixth year and after, the posterior arch fuses to the anterior arch, creating the single first cervical vertebra (Doherty and Heggeness 1994).</p>
 	
@@ -261,14 +261,15 @@
 		    
 	<section class="container">
 		<div class="col-lg-4"> 
-			<br><br><br><br><img src="img/pics/axis.png" alt="Axis - C2" style="width:100%; height:100%;">
+			<br><br><br><br><img src="img/pics/c2-1.png.png" alt="Axis - C2" style="width:100%; height:100%;">
+					<img src="img/pics/c2-2.png.png" alt="Axis - C2" style="width:100%; height:100%;">
 			<h6>Axis of a perinate (left) and a child (right). Note that the dens is missing due to preservation and recovery.</h6>
 	        </div>
 	            
 		<div class="col-lg-3">
 			<div class="description">
 			<h7><a name="axis1">The Axis</a></h7>
-				<br><br><br><br><h2>The Axis</h2>
+				<br><br><br><br><h2><b>The Axis</b></h2>
 			<p>The axis, or C2 vertebra, is made up of four separate primary ossification centers that are all present at birth: two halves of the neural arches, the centrum, and the dens (odontoid process).  Additionally, a secondary ossification center appears for the tip of the odontoid process around the second year of life called the ossiculum terminale (Jenkins 1969).</p>
 			<p>By the third year, the two neural arch halves fuse together to form one single neural arch.  By the fourth year, the dens fuses to the neural arch to form the dentoneural portion.  The centrum then fuses to the dentoneural portion between years four and six (Piatt and Grissom 2011).  By this point, the axis is in only two portions.  The ossiculum terminale fuses to the dens around year 12, thus completing the fusion of ossification centers for the axis (Piatt and Grissom 2011).</p>
 	
@@ -338,7 +339,7 @@
 		<div class="col-lg-3">
 			<div class="description">
 			<h7><a name="cerv1">Cervical vertebrae</a></h7>
-				<br><br><br><br><h2>Cervical vertebrae</h2>
+				<br><br><br><br><h2><b>Cervical vertebrae</b></h2>
 			<p>Primary ossification centers for vertebrae C3-C7 appear in utero and are present at birth.  Like all other vertebrae (except for C1 and C2), there are three primary ossification centers: two half <b>neural arches</b> and the <b>centrum</b>.</p>
 			<p>The two half neural arches fuse together around age two (Patcas et al. 2013).  Around ages three to four years, the neural arch fuses to the centrum (Patcas et al. 2013).  Additionally, there are five epiphyses that appear and fuse during puberty: 2 annular rings that occur on the superior and inferior surfaces of the centrum, 2 epiphyses on the ends of the transverse processes, and 1 epiphysis on the tip of the spinous process (CITATIONS).</p>
 			</div>
@@ -390,7 +391,7 @@
 		<div class="col-lg-3">
 			<div class="description">
 			<h7><a name="thor1">Thoracic vertebrae</a></h7>
-				<br><br><br><br><h2>Thoracic vertebrae</h2>
+				<br><br><br><br><h2><b>Thoracic vertebrae</b></h2>
 			<p>The appearance of primary ossification centers for thoracic vertebrae appear before birth and are the same for all thoracic vertebrae, T1-T12.  Like the other vertebrae, the ossification centers are two half <b>neural arches</b> and the <b>centrum</b>.</p>
 			<p>Like the cervical vertebrae, the thoracic half neural arches fuse to become one single full neural arch around age two (CITATION).  The neural arch fuses to the centrum later in thoracic vertebrae compared to cervical vertebrae.  Fusion at the neurocentral junction is usually complete by the sixth year (CITATION).  Five epiphyses appear during puberty and to the rest of the vertebra from puberty up to the early 20s (CITATION).</p>
 			</div>
@@ -434,7 +435,7 @@
 		<div class="col-lg-4">
 			<div class="description">
 				<h7><a name="lum1">Lumbar vertebrae</a></h7>
-				<br><br><br><br><h2>Lumbar vertebrae</h2>
+				<br><br><br><br><h2><b>Lumbar vertebrae</b></h2>
 			<p>Like other vertebrae, three primary ossification centers for the lumbar vertebrae are present at birth: two half <b>neural arches</b> and the <b>centrum</b>.  The timing of the union of the two half neural arches is more variable in lumbar vertebrae compared to C3-C7 or the thoracic vertebrae.  The two neural arch ossification centers fuse between the first and fifth year.  After the fifth year and after the neural arches fuse together, the centrum will then fuse to the neural arch portion such that there will be one part after the fifth year (Albert and Maples 1995).</p>
 			<p>Secondary ossification centers/epiphyses (two annular rings on the superior and inferior surfaces of the centrum, two epiphyses at the ends of the transverse processes, and the tip of the spinous process) appear during puberty and fuse during later puberty up into the early 20s (Albert and Maples 1995).</p>
 			</div>
@@ -482,7 +483,7 @@
 		<div class="col-lg-3">
 			<div class="description">
 				<h7><a name="sternum1">sternum</a></h7>
-			<br><br><br><br><h2>The Sternum</h2>
+				<br><br><br><br><h2><b>The Sternum</b></h2>
 			<p>The juvenile sternum is comprised of multiple separate pieces or centers called ‘sternebrae’.  At birth, the sternum is represented by at least 4 sternebrae (manubrium included) with a fourth sternebra ossifying within the first year (Ashley 1954, 1956).</p>
 			<p>Between the ages of 3 and 6, the xiphoid process usually starts to ossify, by which, all sternebrae are present.  The sternebrae are numbered from 1 to 4, going superior to inferior.  Between 4 and 10 years of age, sternebrae 3 and 4 fuse. Sternebra 2 fuses to 3 and 4 around years 11 to 16.  The first sternebra may not fuse to the rest of the others until 15 to 20 years after birth (Ashley 1956).  Finally, the xiphoid process may start fusing to the rest of the sternum around age 40 or later (Ashley 1956).</p>
 	
@@ -555,7 +556,7 @@
 		<div class="col-lg-3">
 			<div class="description">
 			<h7><a name="ribs1">Ribs</a></h7>
-				<br><br><br><br><h2>Ribs</h2>
+				<br><br><br><br><h2><b>Ribs</b></h2>
 			<p>Ribs do not offer much for estimating the ages of subadults.  They have more noticeable degenerative and semi-predictable changes as one progresses through adulthood, but some information from them can be used for subadult age estimation.</p>
 			<p>At birth, all ossification centers for the 24 ribs should be present.  Secondary centers do form, yet they are flaky and fragile (Ríos and Cardoso 2009).  Additionally, not much scholarship has been written about ribs in subadult age estimation, supposedly due to their high variability.</p>
 			<p>However, the vertebral end of the rib does eventually fuse with ossification centers found there.  McKern and Stewart (1924) and Stevenson (1924) each looked at this phenomenon and concluded that the epiphyses for the head of the rib commenced ossification around 17 years of age, but fused soon after around ages 17-25.</p>
