--- a/lower_limbs.html
+++ b/lower_limbs.html
@@ -85,8 +85,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Lower Limbs
-                    <small>The Digital Age Estimator of Subadult Skeletons</small>
+		    <h1 class="page-header"><b>Lower Limbs</b>
                 </h1>
             </div>
         </div>
@@ -216,7 +215,7 @@
             
 	<div class="col-lg-3">
 		<div class="description">
-		<h7><a name="femur1">Femur</a></h7>
+			<h7><a name="femur1"><b>Femur</b></a></h7>
 			<br><br><br><br><h2>Femur</h2>
 		<p>Unlike many other bones, the femur is represented by both the diaphysis and the distal epiphysis at birth (Gardner and Gray 1970).  Within the first year of life, the ossification center for the femoral head appears while between 2 and 5 years, the ossification center for the greater trochanter commences (Milgram and Lyne 1975).  It is not until 7 to 12 years of age when the ossification center for the lesser trochanter appears. </p>
 		<p>Fusion times of the femur are variable and somewhat sex-specific.  The femoral head fuses between 12 and 16 years old in females and between 14 and 19 years in males.  The same pattern goes for the greater trochanter: 14-16 females; 16-18 males (Milgram and Lyne 1975; Scheuer and Black 2004).  The lesser trochanter appears to fuse evenly between males and females from 16 to 17 years old.</p>
@@ -280,7 +279,7 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h7><a name="patella1">Patella</a></h7>
-			<br><br><br><br><h2>Patella</h2>
+			<br><br><br><br><h2><b>Patella</b></h2>
 			<p>Since the patella has no separate ossification centers that fuse to it, it’s best to look at its overall morphology.  The patella appears between 1½ and 3½ years.  By 4-5 years old, it is still very course and tough, but it does begin to take shape.  By puberty, it has essentially taken on its adult form (Prakash et al. 1979).</p>
 		</div>
 	</div>	
@@ -297,7 +296,7 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h7><a name="tibia1">Tibia</a></h7>
-			<br><br><br><br><h2>Tibia</h2>
+			<br><br><br><br><h2><b>Tibia</b></h2>
 		<p>Similar to the femur, the tibia may be represented by two ossification centers at birth: the diaphysis and the proximal epiphysis.  If not present at birth, they usually appear within the next few weeks (Scheuer and Black 2004).</p>
 		<p>Within the next/first 10 months of life, the secondary centers for the distal epiphyses begin to ossify and between 3 and 5 years, and the medial malleolus commences ossification.  The distal epiphyses start fusing to the diaphysis between 14-16 years (females) and 15-18 years (males) (Love et al. 1990).</p>
 		<p>Fusion of the proximal epiphysis comes a little bit later in most cases, between 13 and 17 years old in females and 15 and 19 in males.</p>
@@ -343,7 +342,7 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h7><a name="fibula1">Fibula</a></h7>
-			<br><br><br><br><h2>Fibula</h2>
+			<br><br><br><br><h2><b>Fibula</b></h2>
 		<p>Compared to other bones, the commencement, timing, and order of ossification centers for the fibula is comparatively normal.  At birth, the individual is only represented by the diaphysis and no epiphyses, unlike it is with the femur and the tibia (Scranton et al. 1976).</p>
 		<p>Between 10 and 22 months, the distal epiphysis begins its ossification process.  During the 4th and 5th years, the proximal ossification centers begin ossification (Love et al. 1990).  Like with many other bones, it appears that females grow and develop their skeletal system much more quickly than males.  The distal epiphysis fuses between 12 and 15 years (in females) and 15-18 in males (Scheuer and Black 2014). </p>
 		<p?>Lastly, the proximal epiphysis fuses to the fibula, making up the ‘head of the fibula’.  In females, this occurs between 12 and 17 years while for males, it fuses between 15 and 20 years on average.</p>
@@ -390,7 +389,7 @@
 	<div class="col-lg-3">
 		<div class="description">
 		<h7><a name="feet1">Feet</a></h7>
-			<br><br><br><br><h2>Feet</h2>
+			<br><br><br><br><h2><b>Feet</b></h2>
 			<br><br><h2>Tarsals</h2>
 			<p>Like the carpals in the wrists, tarsals in the ankle make up an incredibly complex joint.  To accompany that complex joint is the complicated way that the bones ossified.  Similar to the way that the carpals are dealt with on this site, only the appearance of tarsals will be mentioned due to their complex timetable (Cardoso 2010). (Note: the absence of one tarsal does not mean that that particular tarsal was never ossified, but that it may be lost or degraded due to poor preservation.)</p>
 		</div>
