--- a/skull.html
+++ b/skull.html
@@ -243,11 +243,11 @@
 		<br><br><br><br><div class="estimate">
 			<p><b>Metopic Suture</b></p>
 			
-				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 2 years of age';">
+				<br><input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 2 years';">
 
-				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 2 - 4 years of age';">
+				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 2 - 4 years';">
 
-				<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 4 years of age';">
+				<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 4 years';">
 			
 				<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
@@ -324,20 +324,20 @@
 			
 			<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 1 year (can be up to 3)';">
 
-			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Between 1 and 3 years of age';">
+			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Between 1 and 3 years';">
 			
-			<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 3 years of age';">
+			<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 3 years';">
 		
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
 			
 			<br><p><b>Fusion of pars basilaris to pars laterales</b></p>
 			
-			<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 5 years of age (can be upt to 7)';">
+			<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 5 years (can be up to 7)';">
 
-			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Between 5 and 7 years of age';">
+			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Between 5 and 7 years';">
 			
-			<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 7 years of age';">
+			<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range').value='Older than 7 years';">
 		
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
@@ -382,9 +382,9 @@
 			<br><br><p><b>Closure of spheno-occipital synchondrosis</b></p>
 			<p><small>*Note: this area of fusion is highly variable</small></p>
 			
-			<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 11 (f) or 13 (m) years of age';">
+			<input type="button" value="Unfused" onclick="document.getElementById('age-range').value='Less than 11 (F) or 13 (M) years';">
 			
-			<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value='Older than 16 (f) and 18 (m) years of age';">
+			<br><br><input type="button" value="Complete Fusion" onclick="document.getElementById('age-range').value='Older than 16 (F) and 18 (M) years';">
 			
 			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			
