--- a/pelvic_girdle.html
+++ b/pelvic_girdle.html
@@ -294,12 +294,12 @@
 
 				<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range').value='Around 2-6 years';">
 
-				<br><br><input type="button" value="Complete fusion (w/ 5 segments)" onclick="document.getElementById('age-range').value='Older than 6 years';">
+				<br><br><input type="button" value="Complete fusion of 1 seg." onclick="document.getElementById('age-range').value='Older than 6 years';">
 			
 				<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range').value='_';">
 			<br>
 			
-			<br><br><p><b>Fusion of sacrac segments</b></p>
+			<br><br><p><b>Fusion of sacral segments</b></p>
 			
 				<br><input type="button" value="All 5 unfused" onclick="document.getElementById('age-range').value='Between 6 and 11 years';">
 
