--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
                         <a href="references.html">References</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="about.html">About</a>
                     </li>
                 </ul>
             </div>
