--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <a href="references.html">References</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="about.html">About</a>
                     </li>
                 </ul>
             </div>
@@ -2007,6 +2007,7 @@
                     <li>Input your age range in the "Ages Estimator" box on the right</li>
                     <li>Hit "Save Age Range" if you wish to look at another bone or element</li>
                 </ul>
+		<p>*Note: all photographs of the skeletal remains on this site were taken by site designer Jack Biggs.  These photos are part of the intellectual property of Michigan State Univeristy and the Maya Bioarchaeology Lab.</p>
 		    </div>
 		</div>
        
