--- a/lower_limbs.html
+++ b/lower_limbs.html
@@ -70,7 +70,7 @@
                         <a href="references.html">References</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="about.html">About</a>
                     </li>
                 </ul>
             </div>
