--- a/pelvic_girdle.html
+++ b/pelvic_girdle.html
@@ -67,7 +67,7 @@
                         <a href="references.html">References</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="about.html">About</a>
                     </li>
                 </ul>
             </div>
