--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="row">
             <div class="col-lg-12" id="head">
                 <h1 class="page-header"><b>J-Skel</b>
-                    <small>The Digital Age Estimator of Subadult Skeletons</small>
+                    <small>The Digital Age Estimator of Juvenile Skeletons</small>
                 </h1>
             </div>
         </div>
@@ -1989,9 +1989,9 @@
             <div class="col-lg-6"> 
 		    <div class="intro">
                 <h3>Project Description</h3>
-			<p>Welcome to J-Skel, the digital juvenile skeletal age estimator. This project is aimed at acquainting students of physical anthropology and human osteology with a few of the different methods used to estimate the age-at-death of human subadult skeletal remains.</p>
-			<p>Due to their complex growth and development, subadult remains are rarely addressed in introductory osteology courses and even infrequently studied in advanced classes as well.  As a result, some osteologists and physical anthropologists are relatively unfamiliar with subadult osteology when remains are encountered in the field or lab.  However, it is their complex development that allows to more accurately estimate the age of subadult remains compared to those of an adult.  For this project, epiphyseal fusion will be the main aging technique, but will also touch upon tooth formation and eruption and eruption as well as the appearance of ossification centers.</p>
-			<p>Research involving subadult skeletal remains has taken off in the past few decades, but there is still a bias.  Most of the studies published, and most that are used in this project, are from white European or European American samples.  As the research corpus expands, more regional studies are being conducted and tailored to specific geographically and culturally bounded populations.</p>
+			<p>Welcome to J-Skel, the digital juvenile skeletal age estimator. This project is aimed at acquainting students of physical anthropology and human osteology with a few of the different methods used to estimate the age-at-death of human juvenile skeletal remains.</p>
+			<p>Due to their complex growth and development, juvenile remains are rarely addressed in introductory osteology courses and even infrequently studied in advanced settings.  As a result, some osteologists and physical anthropologists are relatively unfamiliar with juvenile osteology when remains are encountered in the field or lab.  However, it is their complex development that allows to more accurately estimate the age of juvenile remains compared to those of an adult.  For this project, epiphyseal fusion has been the main aging method, but will also touch upon tooth formation and eruption, as well as the appearance of ossification centers.</p>
+			<p>Research involving juvenile skeletal remains has gained traction in the past few decades, but there is still a bias.  Most of the studies published, and most that are used in this project, were done using white European or European American samples.  As the research corpus expands, more regional studies are being conducted and tailored to specific geographically and culturally bounded populations.</p>
 		    
 		    <h3>Instructions</h3>
                 <ul>
@@ -2004,10 +2004,10 @@
 			   <li><a href="pelvic_girdle.html">Pelvic Girdle</a></li>
 		    </ul>          
                     <li>Compare the bone/element you have to the aging methods provided</li>
-                    <li>Input your age range in the "Ages Estimator" box on the right</li>
-                    <li>Hit "Save Age Range" if you wish to look at another bone or element</li>
+                    <li>Select the stage of union or fusion for that element</li>
+                    <li>An age range will then appear in the box on the right</li>
                 </ul>
-		<p>*Note: all photographs of the skeletal remains on this site were taken by site designer Jack Biggs.  These photos are part of the intellectual property of Michigan State Univeristy and the Maya Bioarchaeology Lab.</p>
+		<p>*Note: all illustrations of the skeletal remains on this site were created by site the designer, Jack A. Biggs, and based off of images taken at the Michigan State University Bioarchaeology Lab.</p>
 		    </div>
 		</div>
        
