Caption and text
-created breaks between the sphenoid captions (a,b,c)
-fixed spelling error in sphenoid text (Scheur to Scheuer)

--- a/skull.html
+++ b/skull.html
@@ -357,7 +357,9 @@
 	<div class="col-lg-4"> 
 	<div class="photo">
 		<br><br><br><br><img src="img/pics/sphenoid_all3.png" alt="Perinatal sphenoid" style="width:100%; height:100%;">
-		<h6>a.) Inferior view of an infant sphenoid showing the remnant of the line of fusion for the greater wings and the body. b.) Posterior view of the same infant sphenoid. c.) Base of the cranium of a child indicating the location of the spheno-occipital synchondrosis.</h6>
+		<h6>a.) Inferior view of an infant sphenoid showing the remnant of the line of fusion for the greater wings and the body.</h6> 
+        <h6>b.) Posterior view of the same infant sphenoid.</h6> 
+        <h6>c.) Base of the cranium of a child indicating the location of the spheno-occipital synchondrosis.</h6>
 		</div>
         </div>
             
@@ -367,7 +369,7 @@
 			<br><br><br><br><h2><b>Sphenoid</b></h2>
 			<p>The sphenoid is another bone with multiple ossification centers that appear in fetal life, yet fusion of some of these occurs before birth (Kier and Rothman 1976).</p>
 			<p>By birth, three centers are normally present: (1) the body and lesser wings and (2) a right and a left greater wing fused to the pterygoid plates (Kier and Rothman 1976).  Even though these separate ossification centers are highly complex in form and function, they are all normally fused together during the first year of life.</p>
-			<p>The spenoid also contributes to the spheno-occipital synchondrosis. This surface fuses with the basilar portion of the occipital bone.  Fusion of these two surfaces occurs within a wide time-frame and can also be contigent upon the sex of the individual.  Generally, these fuse earlier in females (between 11 and 16 years of age) than in males (between 13 and 18 years of age), but this is variable (Scheur and Black 2004).</p>
+			<p>The spenoid also contributes to the spheno-occipital synchondrosis. This surface fuses with the basilar portion of the occipital bone.  Fusion of these two surfaces occurs within a wide time-frame and can also be contigent upon the sex of the individual.  Generally, these fuse earlier in females (between 11 and 16 years of age) than in males (between 13 and 18 years of age), but this is variable (Scheuer and Black 2004).</p>
 			
 		</div>
 	</div>
