--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
   <div class="col-lg-5">
     <h3>My name is Jack Biggs and I am a bioarcheologist, having received my M.A. from the Department of Anthropology at Michigan State University (MSU) in 2021. I was a senior staff member and site co-director for the Central Belize Archaeological Survey (CBAS) project, run through MSU. I am currently serving as the Project Bioarchaeologist/Osteologist for the Belize River East Archaeology (BREA) project, jointly run out of the University of New Hampshire and the University of Vermont. My personal research interests lie in skeletal growth and development, social identities of children (particularly in ancient Mesoamerica), and 3D modeling.<h3>
     <h3>This project has been created with the support of the <a href="http://chi.anthropology.msu.edu/">Cultural Heritage Informatics Fellowship</a> and <a href="http://matrix.msu.edu/">Matrix Center for Digital Humanities and Social Sciences</a>.</h3>
-	  <h3>Questions or comments?  Feel free to email me at biggsjac[at]msu[dot]edu.</h3>
+	  <h3>Questions or comments?  Feel free to email me at jack[dot]biggs[at]unh[dot]edu.</h3>
 	</div>
       </section>
        
