--- a/lower_limbs.html
+++ b/lower_limbs.html
@@ -447,6 +447,8 @@
 			
 			<br><br><input type="button" value="Lateral (third) cuneiform" onclick="document.getElementById('age-range10').value='Appears 3-6 years';">
 
+			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range10').value=' ';">
+
 			<br><h5>Estimated Age Range:<input type="text" id="age-range10" value="" size="20"></h5>
 		</div>
 	</div>
@@ -482,6 +484,8 @@
 			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range11').value='13-15 (F); 16-18 (M)';">
 			
 			<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range11').value='15+ (F)and 18+ (M)';">
+
+			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range11').value=' ';">
 			
 			<br><h5>Estimated Age Range:<input type="text" id="age-range11" value="" size="20"></h5>
 
@@ -492,6 +496,8 @@
 			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range12').value='11-13 (F); 14-16 (M)';">
 			
 			<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range12').value='>13 (F); >16 (M)';">
+
+			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range12').value=' ';">
 			
 			<br><h5>Estimated Age Range:<input type="text" id="age-range12" value="" size="20"></h5>
 
@@ -531,6 +537,8 @@
 			
 			<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range13').value='>15 ';">
 
+			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range13').value=' ';">
+
 			<br><h5>Estimated Age Range:<input type="text" id="age-range13" value="" size="20"></h5>			
 
 			<br><p><b>Fusion of bases to intermediate and distal phalanges</b></p>
@@ -540,6 +548,8 @@
 			<br><br><input type="button" value="Fusing" onclick="document.getElementById('age-range14').value='11-13 (F); 14-16 (M)';">
 			
 			<br><br><input type="button" value="Complete fusion" onclick="document.getElementById('age-range14').value='13+ (F) and 16+ (M)';">
+
+			<br><br><input type="button" value="Clear Age Range" onclick="document.getElementById('age-range14').value=' ';">
 
 			<br><h5>Estimated Age Range:<input type="text" id="age-range14" value="" size="20"></h5>
 			
