--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="row">
             <div class="col-lg-12" id="head">
                 <h1 class="page-header"><b>J-Skel</b>
-                    <small>The Digital Age Estimator of Juvenile Skeletons</small>
+                    <small style="color:black">The Digital Age Estimator of Juvenile Skeletons</small>
                 </h1>
             </div>
         </div>
