--- a/lower_limbs.html
+++ b/lower_limbs.html
@@ -86,6 +86,7 @@
         <div class="row">
             <div class="col-lg-12">
 		    <h1 class="page-header"><b>Lower Limbs</b>
+				<small style="color:black">Epiphyseal fusion in the leg, lower leg, and feet</small>
                 </h1>
             </div>
         </div>
