--- a/pelvic_girdle.html
+++ b/pelvic_girdle.html
@@ -83,6 +83,7 @@
         <div class="row">
             <div class="col-lg-12">
 		    <h1 class="page-header"><b>The Pelvic girdle</b>
+                <small style="color:black">Fusion of pelvic and sacral elements</small>
                 </h1>
             </div>
         </div>
