--- a/skull.html
+++ b/skull.html
@@ -83,7 +83,7 @@
         <div class="row">
             <div class="col-lg-12">
 		    <h1 class="page-header"><b>The Skull</b>
-                    <small>Fusion of cranial and mandibular elements</small>
+                    <small style="color:black">Fusion of cranial and mandibular elements</small>
                 </h1>
             </div>
         </div>
