--- a/thorax.html
+++ b/thorax.html
@@ -83,6 +83,7 @@
         <div class="row">
             <div class="col-lg-12">
 		    <h1 class="page-header"><b>The Thorax</b>
+				<small style="color:black">Fusion of vertebral, sternal, and rib elements</small>
                 </h1>
             </div>
         </div>
