Fixed spacing above headings
-deleted <br>'s on almost all pages to fix spacing issues
-now less space under the horizontal bars
-made all columns per section even

--- a/pelvic_girdle.html
+++ b/pelvic_girdle.html
@@ -181,7 +181,7 @@
 	    
 <section class="container"> 
 	<div class="col-lg-4">
-		<br><br><br><br><br><img src="img/pics/pelvis_infant3.png" alt="Perinate pelvis" style="width:100%; height:100%; border-radius:20px;">
+		<br><br><img src="img/pics/pelvis_infant3.png" alt="Perinate pelvis" style="width:100%; height:100%; border-radius:20px;">
 		<h6>Right unfused os coxa of a perinate.</h6>
 		<img src="img/pics/pelvis_child3.png" alt="Child pelvis" style="width:100%; height:100%; border-radius:20px;">
 		<h6>Right unfused os coxa of a child.</h6>
@@ -192,7 +192,7 @@
 	<div class="col-lg-4">
 		<div class="description">
 			<h7><a name="oscoxa1">os coxa</a></h7>
-			<br><br><br><br><h2><b>Os coxa</b></h2>
+			<br><h2><b>Os coxa</b></h2>
 		<p>At birth, all three bones of the os coxa are present: ilium, ischium, and pubis.  These three bones do not all fuse together at the same time, but in a specific order at different times.  Additionally, there are numerous small and ‘ossific islands’ that appear and fuse during growth and development, but only the bigger and main epiphyses will be discussed here.</p>
 		
 		<h2>Ischium and pubis</h2>	
@@ -207,7 +207,7 @@
 	</div>
 	
 	<div class="col-lg-3">
-		<br><br><br><br><div class="estimate">
+		<br><br><div class="estimate">
 			<p><b>Fusion of ischiopubic ramus</b></p>
 			
 				<input type="button" value="Unfused" onclick="document.getElementById('age-range1').value='<5 years';">
@@ -266,7 +266,7 @@
 	    
 <section class="container"> 
 	<div class="col-lg-4"> 
-		<br><br><br><br><br><img src="img/pics/sacrum_anterior3.png" alt="Anterior sacrum" style="width:100%; height:100%; border-radius:20px;">
+		<br><br><img src="img/pics/sacrum_anterior3.png" alt="Anterior sacrum" style="width:100%; height:100%; border-radius:20px;">
 		<h6>Anterior view of a child sacrum.</h6>
 		<img src="img/pics/sacrum_posterior3.png" alt="Posterior sacrum" style="width:100%; height:100%; border-radius:20px;">
 		<h6>Posterior view of a child sacrum.</h6>
@@ -277,7 +277,7 @@
 	<div class="col-lg-4">
 		<div class="description">
 		<h7><a name="sacrum1">Sacrum</a></h7>
-			<br><br><br><br><h2><b>Sacrum</b></h2>
+			<br><h2><b>Sacrum</b></h2>
 		<p>Although technically comprised of vertebrae, the sacrum is placed in the pelvis section of this project for its participation in the pelvic inlet and the morphology of the pelvic girdle overall.</p>
 		<p>The average human has 5 sacral elements, but they do not all fuse in the same way or with the same number of elements.  S1-S3 are each comprised of 5 different ossification centers: one centrum, two lateral elements, and two half neural arches.  S4 and S5 each have only three: one centrum and two half neural arches (Fawcett 1907).</p>
 		<p>Over time, all of these elements will eventually fuse to become one single bone, but their timing and sequence of fusion can aid in age estimation.</p>
@@ -288,7 +288,7 @@
 	</div>
 	
 	<div class="col-lg-3">
-		<br><br><br><br><div class="estimate">
+		<br><br><div class="estimate">
 			<p><b>Fusion of sacral elements (within a single segment)</b></p>
 			
 				<input type="button" value="All unfused" onclick="document.getElementById('age-range5').value='<2 years';">
