--- a/skull.html
+++ b/skull.html
@@ -466,11 +466,11 @@
         <!-- Related Projects Row -->
         <div class="row">
 
-            <div class="col-lg-12">
+            <div class="col-lg-12"style="padding-left:3%">
                 <h3 class="page-header">Jump to another region</h3>
             </div>
 
-            <div class="col-sm-3 col-xs-6">
+            <div class="col-sm-3 col-xs-6"style="padding-left:3%">
                 <a href="thorax.html">
                     <img class="img-responsive portfolio-item" src="img/j-skel thorax.png" alt="" style="border-radius:10px;">
                 </a>
@@ -488,7 +488,7 @@
                 </a>
             </div>
 
-            <div class="col-sm-3 col-xs-6">
+            <div class="col-sm-3 col-xs-6"style="padding-right:3%">
                 <a href="lower_limbs.html">
                     <img class="img-responsive portfolio-item" src="img/j-skel leg.png" alt="" style="border-radius:10px;">
                 </a>
