--- a/upper_limbs.html
+++ b/upper_limbs.html
@@ -578,11 +578,11 @@
         <!-- Related Projects Row -->
         <div class="row">
 
-            <div class="col-lg-12">
+            <div class="col-lg-12" style="padding-left:3%">
                 <h3 class="page-header">Jump to a region</h3>
             </div>
 
-            <div class="col-sm-3 col-xs-6">
+            <div class="col-sm-3 col-xs-6" style="padding-left:3%">
                 <a href="skull.html">
                     <img class="img-responsive portfolio-item" src="img/j-skel skulls.png" alt="" style="border-radius:10px;">
                 </a>
@@ -600,7 +600,7 @@
                 </a>
             </div>
 
-            <div class="col-sm-3 col-xs-6">
+            <div class="col-sm-3 col-xs-6" style="padding-right:3%">
                 <a href="lower_limbs.html">
                     <img class="img-responsive portfolio-item" src="img/j-skel leg.png" alt="" style="border-radius:10px;">
                 </a>
