--- a/thorax.html
+++ b/thorax.html
@@ -172,7 +172,7 @@
 	 </a>
  </g>
 </svg>
-
+<p>Click on any of the bones of the thorax to take you to that bone's age estimator.</p>
 
 </div>
             
