--- a/lower_limbs.html
+++ b/lower_limbs.html
@@ -177,6 +177,7 @@
   </g>
  </g>
 </svg>
+<p>Click on any of the bones of the skull to take you to that bone's age estimator.</p>
 </div>
 		    
 	<div class="col-md-4">
@@ -297,7 +298,7 @@
 		<br><br><div class="estimate">
 			<p><b>Patella Presentation</b></p>
 			
-				<input type="button" value="Absent" onclick="document.getElementById('age-range5').value='<1.5 tp to 3.5 years';">
+				<input type="button" value="Absent" onclick="document.getElementById('age-range5').value='<1.5 up to 3.5 years';">
 
 				<br><br><input type="button" value="Small and Coarse" onclick="document.getElementById('age-range5').value='4/5 - 11/12 yrs';">
 
