Spacing of text under top svgs
Added space under the svgs at the top of each page
-two <br> before text

--- a/upper_limbs.html
+++ b/upper_limbs.html
@@ -196,7 +196,7 @@
   </g>
  </a>
 </svg>
-<p>Click on any of the bones of the upper limbs to take you to that bone's age estimator.</p>
+<br><br><p>Click on any of the bones of the upper limbs to take you to that bone's age estimator.</p>
 </div>
 		    
 	<div class="col-md-4">
