--- a/lower_limbs.html
+++ b/lower_limbs.html
@@ -177,7 +177,7 @@
   </g>
  </g>
 </svg>
-<p>Click on any of the bones of the skull to take you to that bone's age estimator.</p>
+<br><br><p>Click on any of the bones of the skull to take you to that bone's age estimator.</p>
 </div>
 		    
 	<div class="col-md-4">
