--- a/pelvic_girdle.html
+++ b/pelvic_girdle.html
@@ -150,7 +150,7 @@
   </g>
  </g>
 </svg>
-<p>Click on any of the bones of the pelvic girdle to take you to that bone's age estimator.</p>
+<br><br><p>Click on any of the bones of the pelvic girdle to take you to that bone's age estimator.</p>
 </div>
             
             <div class="col-md-4">
