--- a/pelvic_girdle.html
+++ b/pelvic_girdle.html
@@ -324,7 +324,7 @@
         <div class="row">
 
             <div class="col-lg-12" style="padding-left:3%">
-                <h3 class="page-header">Jump to a region</h3>
+                <h3 class="page-header">Jump to another region</h3>
             </div>
 
             <div class="col-sm-3 col-xs-6" style="padding-left:3%">
