--- a/thorax.html
+++ b/thorax.html
@@ -579,7 +579,7 @@
 	
 
 	            <div class="col-lg-12" style="padding-left:3%">
-	                <h3 class="page-header">Jump to a region</h3>
+	                <h3 class="page-header">Jump to another region</h3>
 	            </div>
 	
 
